<resources>
    <string name="app_name">167 Scouting</string>
    <string name="title_blue_alliance">Blue Alliance</string>
    <string name="title_pit_scouting">Pit Scouting</string>
    <string name="title_match_scouting">Match Scouting</string>
    <string name="auto">Auto</string>
    <string name="amp_notes"> Amp:</string>
    <string name="speaker_notes"> Speaker:</string>
    <string name="leave">Leave</string>
    <string name="endgame_human_player">Endgame</string>
    <string name="tele_op">Tele-Op</string>
    <string name="on_stage">On Stage</string>
    <string name="on_stage_spotlit">On Stage (Spotlit)</string>
    <string name="trap_note">Trap</string>
    <string name="high_ring_on_pole_over_chain">High Ring on pole over chain</string>
    <string name="amplifiers">Amplifiers: </string>
    <string name="coopertition">Coopertition</string>
    <string name="parked">Parked</string>
    <string name="melody">Melody</string>
    <string name="ensamble">Ensamble</string>
    <string name="harmony">Harmony</string>
    <string name="_18_15_co_op_notes">18(15 co-op) Notes</string>
    <string name="_10_stage_points_2_onstage_robot">10 Stage Points 2 Onstage Robot</string>
    <string name="harmony_desc">2 Robot Same Chain</string>
    <string name="dec_button">-</string>
    <string name="inc_button">+</string>
    <string name="submit">Submit</string>
    <string name="title_alliance_scouting">Alliance Scouting</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="team">Team</string>
    <string name="rings">Rings:</string>
    <string name="defense">Defense</string>
    <string name="shooting_distance_sp_iw_ow_po">Shooting distance: SPEAKER  |  INNERWING  |  OUTERWING  |  PODIUM</string>
    <string name="frc_field_2024">FRC Field 2024</string>
    <string name="tele_op_amp_increase">Tele Op Amp Increase</string>
    <string name="auto_amp_decrease">Auto Amp Decrease</string>
    <string name="auto_amp_increase">Auto Amp Increase</string>
    <string name="auto_speaker_increase">Auto Speaker Increase</string>
    <string name="teleop_speaker_increase">TeleOp Speaker Increase</string>
    <string name="auto_speaker_decrease">Auto Speaker Decrease</string>
    <string name="teleop_amp_decrease">TeleOp Amp Decrease</string>
    <string name="teleop_speaker_decrease">TeleOp Speaker Decrease</string>
    <string name="scout_name">Scout Name:</string>
    <string name="match_number">Match Number:</string>
    <string name="scouting">Scouting Assignment:</string>
    <string name="team_number">Team Number:</string>
    <string name="team_number_hint">Team Number</string>
    <string name="match_number_hint">Match Number</string>
    <string name="blue_melody">Blue Melody</string>
    <string name="submit_alliance">Submit</string>
    <string name="blue_alliance_notes">Blue Alliance Notes</string>
    <string name="team_1">Team #1</string>
    <string name="team_2">Team#2</string>
    <string name="amp">Amp</string>
    <string name="coopertition_blue">Coopertition Blue</string>
    <string name="harmony_blue">harmony blue</string>
    <string name="michael_team_1">Michael team 1</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="name">Name</string>
    <string name="name_three">Name</string>
    <string name="name_two">Name</string>
    <string name="michael_o_meter">Michael-O-Meter</string>
    <string name="team_3">Team #3</string>
    <string name="red_alliance_notes">Red Alliance Notes</string>
    <string name="michael_o_meter_red">Michael_O_Meter</string>
    <string name="team_1_red">Team #1</string>
    <string name="team_2_red">Team#2</string>
    <string name="name_one">Name</string>
    <string name="name_two_red">Name</string>
    <string name="name_three_red">Name</string>
    <string name="team_3_red">Team #3</string>
    <string name="assigned_scout">Assigned scout</string>
    <string name="_167_pit_scouting_form">167 Pit Scouting Form</string>
    <string name="basic_info_questions">Basic Info Questions</string>
    <string name="_0">0</string>
    <string name="drive_coach_name">Drive Coach Name</string>
    <string name="drive_base">Drive base</string>
    <string name="auto_questions">Auto Questions</string>
    <string name="how_many_autos">How many autos?</string>
    <string name="where_do_you_start">Where do you start?</string>
    <string name="all">All</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="where_do_you_score">Where do you score?</string>
    <string name="both">Both</string>
    <string name="speaker">Speaker</string>
    <string name="how_many_notes_can_you_score">How many notes can you score?</string>
    <string name="teleop_questions">Teleop Questions</string>
    <string name="game_strategy">Game Strategy</string>
    <string name="enter_a_description_of_their_strategy">Enter a description of their strategy.</string>
    <string name="intake">Intake</string>
    <string name="ground">Ground</string>
    <string name="source">Source</string>
    <string name="what_is_the_farthest_shot_you_can_make">What is the farthest shot you can make?</string>
    <string name="against_subwoofer">Against subwoofer</string>
    <string name="against_podium">Against podium</string>
    <string name="in_your_wing">In your wing</string>
    <string name="how_many_points_can_you_score">How many points can you score?</string>
    <string name="endgame_questions">Endgame Questions</string>
    <string name="how_long_does_it_take_you_to_climb">How long does it take you to climb?</string>
    <string name="rookie_team">Rookie Team?</string>
    <string name="do_you_climb">Do you climb?</string>
    <string name="can_you_get_a_harmony">Can you get a harmony?</string>
    <string name="do_you_score_on_the_trap">Do you score on the trap?</string>
    <string name="do_you_intake">Do you intake?</string>
    <string name="do_you_shoot">Do you shoot?</string>
    <string name="do_you_preload">Do you preload?</string>
    <string name="do_you_have_an_auto">Do you have an auto?</string>
    <string name="notes">Notes</string>
    <string name="notes_about_match">Notes about match</string>
    <string name="other_factors">Other Factors</string>
    <string name="robot_died_was_disabled">Robot Died/Was Disabled</string>
    <string name="top_ranked_team">Top Ranked Team:</string>
    <string name="mid_ranked_team">Mid-Ranked Team:</string>
    <string name="bottom_ranked_team">Bottom Ranked Team:</string>
    <string name="ensamble_desc">10 Stage points 2 OnStage robots</string>
    <string name="melody_desc">18 (15 Co-Op) Notes scored</string>
    <string name="co_op_desc">Pressed yellow button</string>
    <string name="tablet_number">Tablet Number</string>
    <string name="this_is_graphing_testing">This is Graphing Testing!</string>
    <string name="graphing_testing">Graphing Testing</string>
    <string name="button">Button</string>
</resources>