<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="#FAFAD2"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <EditText
        android:id="@+id/username"
        android:layout_width="585dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/team"
        android:layout_width="582dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/team"
        android:inputType="text"
        android:textSize="40dp" />



</LinearLayout>